
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:windowSoftInputMode="stateVisible|adjustResize">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="48dp"
            android:text="@string/username_text" />

        <EditText
            android:id="@+id/NameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:ems="10"
            android:inputType="text"
        	android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/NameInput"
            android:layout_marginTop="20dp"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/PasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PasswordInput"
            android:layout_marginTop="20dp"
            android:text="@string/dateOfBirth" />

        <EditText
            android:id="@+id/DateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:inputType="date"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/DateInput"
            android:layout_marginTop="20dp"
            android:text="@string/checkbox"
	        android:onClick="onCheckboxClicked" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/textView3"
            android:onClick="Register_button_click"
	    	android:text="@string/register_button" />

    </RelativeLayout>
