<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="stateVisible|adjustResize">

    <TextView
        android:id="@+id/userTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="102dp"
        android:text="@string/user_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/userTextField"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userTextView"
        android:layout_alignBottom="@+id/userTextView"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/userTextView"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userTextField"
        android:layout_marginTop="17dp"
        android:layout_toLeftOf="@+id/userTextField"
        android:text="@string/password_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passwordTextField"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordTextView"
        android:layout_alignBottom="@+id/passwordTextView"
        android:layout_alignLeft="@+id/userTextField"
        android:ems="10"
        android:inputType="textPassword"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/passwordTextField"
        android:layout_centerVertical="true"
        android:text="@string/login_button"
        android:onClick="login" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userTextView"
        android:layout_centerVertical="true"
        android:text="@string/register_button"
        android:onClick="register" />

</RelativeLayout>
