<?xml version="1.0" encoding="UTF-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:windowSoftInputMode="stateVisible|adjustResize">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="48dp"
            android:text="@string/user_text"/>

        <EditText
            android:id="@+id/NameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
            android:clickable="false" 
	        android:cursorVisible="false" 
	        android:focusable="false" 
	        android:focusableInTouchMode="false"/>
            <!-- last 4 settings are to disable user control -->
            
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/NameInput"
            android:layout_marginTop="20dp"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/PasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:inputType="textPassword" 
            android:singleLine="true"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PasswordInput"
            android:layout_marginTop="20dp"
            android:text="@string/birthdate_text" 
            android:singleLine="true"/>

        <EditText
            android:id="@+id/DateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:inputType="date" 
            android:clickable="false" 
	        android:cursorVisible="false" 
	        android:focusable="false" 
	        android:focusableInTouchMode="false"/>

        <CheckBox
            android:id="@+id/update_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/DateInput"
            android:layout_marginTop="20dp"
            android:text="@string/subscriber_checkbox"/>

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_checkbox"
            android:layout_marginLeft="31dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/textView3"
            android:onClick="update_button_click"
	    	android:text="@string/update_button" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="logout_button_click"
            android:text="@string/logout_button" />

    </RelativeLayout>